--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#141314" />
-
+	 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Noto+Serif&display=swap" rel="stylesheet">
     <title>Tetris</title>
   </head>
   <body>
