--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#141314" />
+    <meta name="theme-color" content="#0d0207" />
 	 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Noto+Serif&display=swap" rel="stylesheet">
     <title>Tetris</title>
   </head>
